--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/weather-icons.css">
     <link rel="stylesheet" type="text/css" href="css/weather.css">
+    <link rel="stylesheet" type="text/css" href="css/clock_date.css">
 
 </head>
 <body>
@@ -32,14 +33,23 @@
     <div class="region top center"><div class="container"></div></div>
     <div class="region top right"><div class="container"></div></div>
 </div>
-<div class="region upper third"><div class="container"></div></div>
+
+<div class="region upper third">
+    <div class="container">
+        <!-- Clock with date -->
+        <div class="region left">
+            <clock></clock>
+        </div>
+    </div>
+</div>
+
 <div class="region middle center"><div class="container"></div></div>
 <div class="region lower third"><div class="container"><br/></div></div>
 <div class="region bottom bar">
-    <div class="container"></div>
-    <div class="region bottom left"><div class="container"></div></div>
-    <div class="region bottom center"><div class="container"></div></div>
-    <div class="region bottom right"><div class="container"></div></div>
+    <div class="container">
+        <!-- Jokes -->
+        <jokes></jokes>
+    </div>
 </div>
 <div class="region fullscreen above"><div class="container"></div></div>
 </div>
