Added google calendar as component

--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
     </div>
 
     <div class="region top center"><div class="container"></div></div>
-    <div class="region top right"><div class="container"></div></div>
+
+    <!-- Calendar -->
+    <div class="region top right">
+        <div class="container">
+            <calendar></calendar>
+        </div>
+    </div>
 </div>
 
 <div class="region upper third">
