--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="mobile-web-app-capable" content="yes">
 
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="css/weather-icons.css">
-    <link rel="stylesheet" type="text/css" href="css/weather.css">
-    <link rel="stylesheet" type="text/css" href="css/clock_date.css">
-    <link rel="stylesheet" type="text/css" href="css/traffic.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="dist/app.css">
 
 </head>
 <body>
