Build with production

--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
 
     <script type="text/javascript" src="dist/bootstrap.js"></script>
     <script type="text/javascript" src="dist/app.js"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDU5cVxRugrkzjJIHBJud28UvXdYr_m8w"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key={key}"></script>
 </body>
 </html>
