--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                     <calendar></calendar>
                 </div>
                 <!-- Middle -->
-                <div class="col-4 middle"></div>
+                <div class="col-4 middle">
+                    <!-- todo: this module should only start when we run face recognition -->
+                    <camera></camera>
+                </div>
                 <!-- Right -->
                 <div class="col-4 right">
                     <traffic></traffic>
