Redesigned weather component and removed camera module from index as it cant find the rpi camera

--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
                     <calendar></calendar>
                 </div>
                 <!-- Middle -->
-                <div class="col-4 middle">
-                    <!-- todo: this module should only start when we run face recognition -->
-                    <camera></camera>
-                </div>
+                <div class="col-4 middle"></div>
                 <!-- Right -->
                 <div class="col-4 right">
                     <traffic></traffic>
